[package]
edition = "2021"
name = "mediaplex"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { git = "https://github.com/napi-rs/napi-rs", default-features = false, features = [
    "napi4",
] }
napi-derive = { git = "https://github.com/napi-rs/napi-rs" }
symphonia = { version = "0.5.3", features = ["all"] }

[build-dependencies]
napi-build = { git = "https://github.com/napi-rs/napi-rs" }
cmake = "0.1"
bindgen = "0.59.1"
pkg-config = "0.3.17"

[profile.release]
lto = true
